--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,77 +1,88 @@
-source = $HOME/.config/hypr/themes/mocha.conf
+source = $HOME/.cache/wal/colors-hyprland.conf
 
-$accent = $mauve
-$accentAlpha = $mauveAlpha
-$font = JetBrainsMono Nerd Font
+# $font = JetBrainsMono Nerd Font
+$font = Product Sans
 
-# GENERAL
-general {
-  disable_loading_bar = true
-  hide_cursor = true
-}
 
-# BACKGROUND
 background {
-  monitor = eDP-1
-  path = $HOME/.config/hypr/assets/cat.svg
-  blur_passes = 0
-  color = $base
+    monitor =
+    path = $HOME/.current_wallpaper
+    # color = $color1
+
+    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
+    blur_size = 4
+    blur_passes = 3 # 0 disables blurring
+    noise = 0.0117
+    contrast = 1.3000 # Vibrant!!!
+    brightness = 0.8000
+    vibrancy = 0.2100
+    vibrancy_darkness = 0.0
 }
 
-# TIME
+# Hours
 label {
-  monitor =
-  text = $TIME12
-  color = $text
-  font_size = 90
-  font_family = $font
-  position = -30, 0
-  halign = right
-  valign = top
+    monitor =
+    text = cmd[update:1000] echo "<b><big> $(date +"%H") </big></b>"
+    color = $color6
+    font_size = 200
+    font_family = $font
+    shadow_passes = 4
+    shadow_size = 5
+
+    position = 0, 400
+    halign = center
+    valign = center
 }
 
-# DATE
+# Minutes
 label {
-  monitor =
-  text = cmd[update:43200000] date +"%A, %d %B %Y"
-  color = $text
-  font_size = 25
-  font_family = $font
-  position = -30, -150
-  halign = right
-  valign = top
+    monitor =
+    text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
+    color = $color6
+    font_size = 200
+    font_family = $font
+    shadow_passes = 4
+    shadow_size = 5
+
+    position = 0, 160
+    halign = center
+    valign = center
 }
 
-# USER AVATAR
-image {
-  monitor =
-  path = $HOME/.face
-  size = 100
-  border_color = $accent
-  position = 0, 75
-  halign = center
-  valign = center
+
+# Week
+label {
+    monitor =
+    text = cmd[update:43200000] date +"%A, %d %B"
+    color = $color7
+    font_size = 30
+    font_family = $font
+
+    position = 0,0
+    halign = center
+    valign = center
 }
 
-# INPUT FIELD
+
+
 input-field {
-  monitor =
-  size = 300, 60
-  outline_thickness = 4
-  dots_size = 0.2
-  dots_spacing = 0.2
-  dots_center = true
-  outer_color = $accent
-  inner_color = $surface0
-  font_color = $text
-  fade_on_empty = false
-  placeholder_text = <span foreground="##$textAlpha"><i> Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
-  hide_input = false
-  check_color = $accent
-  fail_color = $red
-  fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-  capslock_color = $yellow
-  position = 0, -47
-  halign = center
-  valign = center
+    monitor =
+    size = 250, 50
+    outline_thickness = 3
+
+    dots_size = 0.26 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.64 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    dots_rouding = -1
+
+    rounding = 22
+    outer_color = $color0
+    inner_color = $color0
+    font_color = $color6
+    fade_on_empty = true
+    placeholder_text = <i>Password...</i> # Text rendered in the input box when it's empty.
+
+    position = 0, 120
+    halign = center
+    valign = bottom
 }
