--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ source= ~/.cache/wal/colors-hyprland.conf
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1, 2880x1800@90, 0x0, 2
+monitor = eDP-1, 2880x1800@60, 0x0, 2
 
 
 ###################
@@ -49,11 +49,12 @@ $powermenu =  ~/.config/rofi/my_scripts/powermenu.sh
 
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme Adwaita
 exec-once = hypridle
-exec-once = waybar
-exec-once = dunst
+# exec-once = hyprpanel
+exec-once = hyprpanel > ~/hyprpanellogs.txt 2>&1
+# exec-once = dunst
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec-once = $wallpaper
+# exec-once = $wallpaper
 exec-once = systemctl --user start hyprpolkitagent
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -76,7 +77,7 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 4
-    gaps_out = 8
+    gaps_out = 0,8,8,8
 
     border_size = 2
 
