updated path for swww wall script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ $fileManager = nautilus
 $menu = ~/.config/rofi/my_scripts/rofi_run
 $clipboard = ~/.config/rofi/my_scripts/rofi_clipboard
 $screenshot = ~/.config/rofi/my_scripts/screenshot.sh
-$wallpaper = ~/.local/bin/swww_change
+$wallpaper = ~/.config/hypr/scripts/swww_change
 $powermenu =  ~/.config/rofi/my_scripts/powermenu.sh 
 #################
 ### AUTOSTART ###
