--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,7 +24,9 @@ source= ~/.cache/wal/colors-hyprland.conf
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1, 2880x1800@60, 0x0, 2
-
+xwayland {
+  # force_zero_scaling = true
+}
 
 ###################
 ### MY PROGRAMS ###
@@ -33,11 +35,11 @@ monitor = eDP-1, 2880x1800@60, 0x0, 2
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = ghostty
+$terminal = alacritty
 $fileManager = nautilus
 $menu = ~/.config/rofi/my_scripts/rofi_run
 $clipboard = ~/.config/rofi/my_scripts/rofi_clipboard
-$screenshot = ~/.config/rofi/my_scripts/screenshot.sh
+$screenshot = hyprshot-gui
 $wallpaper = ~/.config/hypr/scripts/swww_change
 $powermenu =  ~/.config/rofi/my_scripts/powermenu.sh 
 #################
@@ -49,8 +51,8 @@ $powermenu =  ~/.config/rofi/my_scripts/powermenu.sh
 
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme Adwaita
 exec-once = hypridle
-# exec-once = hyprpanel
-exec-once = hyprpanel > ~/hyprpanellogs.txt 2>&1
+exec-once = hyprpanel
+# exec-once = hyprpanel > ~/hyprpanellogs.txt 2>&1
 # exec-once = dunst
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
@@ -206,9 +208,11 @@ input {
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
+	accel_profile = flat
+	
     touchpad {
         natural_scroll = true
+        scroll_factor = 2
     }
 }
 
@@ -284,6 +288,12 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+bind = $mainMod ALT, left, movewindow ,l
+bind = $mainMod ALT, right, movewindow ,r
+bind = $mainMod ALT, up, movewindow, u
+bind = $mainMod ALT,  down, movewindow, d
+
+
 #custom
 bind = $mainMod ,W, exec, $wallpaper
 bind = $mainMod ,V, exec, $clipboard
@@ -296,6 +306,9 @@ binde = $mainMod SHIFT, right, resizeactive, 10 0
 binde = $mainMod SHIFT, left, resizeactive, -10 0
 binde = $mainMod SHIFT, up, resizeactive, 0 -10
 binde = $mainMod SHIFT, down, resizeactive, 0 10
+
+# suspend on closing lid
+# bindl = , switch:Lid Switch, exec, systemctl suspend
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
@@ -335,9 +348,42 @@ windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
 blurls = rofi
 layerrule = blur, rofi
+windowrulev2 = float, title:^(.*Hyprshot.*)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+
+windowrulev2 = float, class:^(blueman-manager)$
+windowrulev2 = size 400 400, class:^(blueman-manager)$
+windowrulev2 = move 100%-w-70 40, class:^(blueman-manager)$
+
+windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = size 400 800, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = move 100%-w-10 40, class:^(org.pulseaudio.pavucontrol)$
+
+
+################
+###  Plugins ###
+################
+
+
+# bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(111111)
+        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = true # laptop touchpad
+        gesture_fingers = 3  # 3 or 4
+        gesture_distance = 300 # how far is the "max"
+        gesture_positive = true # positive = swipe down. Negative = swipe up.
+    }
+}
+
