--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -2,6 +2,7 @@ source = $HOME/.cache/wal/colors-hyprland.conf
 
 # $font = JetBrainsMono Nerd Font
 $font = Product Sans
+# $font = Geist Mono
 
 
 background {
@@ -22,7 +23,7 @@ background {
 # Hours
 label {
     monitor =
-    text = cmd[update:1000] echo "<b><big> $(date +"%H") </big></b>"
+    text = cmd[update:1000] echo "<b><big> $(date +"%I") </big></b>"
     color = $color6
     font_size = 200
     font_family = $font
