--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,6 +42,8 @@ $clipboard = ~/.config/rofi/my_scripts/rofi_clipboard
 $screenshot = hyprshot-gui
 $wallpaper = ~/.config/hypr/scripts/swww_change
 $powermenu =  ~/.config/rofi/my_scripts/powermenu.sh 
+$hyprswitch = ~/.cargo/bin/hyprswitch
+$rofiswitch = ~/.config/rofi/my_scripts/rofi_wswitch
 #################
 ### AUTOSTART ###
 #################
@@ -52,10 +54,11 @@ $powermenu =  ~/.config/rofi/my_scripts/powermenu.sh
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme Adwaita
 exec-once = hypridle
 exec-once = hyprpanel
-# exec-once = hyprpanel > ~/hyprpanellogs.txt 2>&1
-# exec-once = dunst
+exec-once = hyprpm reload
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+exec-once = $hyprswitch init --show-title --size-factor 5.5 --workspaces-per-row 5 --custom-css ~/.config/hyprswitch/style.css &
+
 # exec-once = $wallpaper
 exec-once = systemctl --user start hyprpolkitagent
 #############################
@@ -307,6 +310,12 @@ binde = $mainMod SHIFT, left, resizeactive, -10 0
 binde = $mainMod SHIFT, up, resizeactive, 0 -10
 binde = $mainMod SHIFT, down, resizeactive, 0 10
 
+bind = ALT, TAB, exec, $rofiswitch
+
+$key = tab	
+$mod = super
+bind = $mod , $key, exec,$hyprswitch gui --mod-key $mod --key $key --max-switch-offset 9 --hide-active-window-border
+
 # suspend on closing lid
 # bindl = , switch:Lid Switch, exec, systemctl suspend
 
@@ -356,6 +365,9 @@ windowrulev2 = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+# screenshot border issues
+layerrule = noanim, hyprpicker
+layerrule = noanim, selection
 
 windowrulev2 = float, class:^(blueman-manager)$
 windowrulev2 = size 400 400, class:^(blueman-manager)$
@@ -369,21 +381,3 @@ windowrulev2 = move 100%-w-10 40, class:^(org.pulseaudio.pavucontrol)$
 ################
 ###  Plugins ###
 ################
-
-
-# bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
-
-plugin {
-    hyprexpo {
-        columns = 3
-        gap_size = 5
-        bg_col = rgb(111111)
-        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
-
-        enable_gesture = true # laptop touchpad
-        gesture_fingers = 3  # 3 or 4
-        gesture_distance = 300 # how far is the "max"
-        gesture_positive = true # positive = swipe down. Negative = swipe up.
-    }
-}
-
