--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ source= ~/.cache/wal/colors-hyprland.conf
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1, 2880x1800@60, 0x0, 2
+monitor = eDP-1, 2880x1800@90, 0x0, 2
 xwayland {
   # force_zero_scaling = true
 }
@@ -82,7 +82,7 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 4
-    gaps_out = 0,8,8,8
+    gaps_out = 8,8,0,8
 
     border_size = 2
 
@@ -108,7 +108,7 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -193,6 +193,7 @@ master {
 misc {
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+	vfr = true    
 }
 
 
@@ -229,6 +230,10 @@ gestures {
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
+}
+device {
+	name = elan0522:01-04f3:31c3-touchpad
+	sensitivity = 0.5
 }
 
 
