hypr config removed bug

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -41,7 +41,7 @@ $menu = ~/.config/rofi/my_scripts/rofi_run
 $clipboard = ~/.config/rofi/my_scripts/rofi_clipboard
 $screenshot = hyprshot-gui
 $wallpaper = ~/.config/hypr/scripts/swww_change
-$powermenu =  ~/.config/rofi/my_scripts/powermenu.sh 
+$powermenu =  ~/.config/rofi/my_scripts/powermenu.sh
 $hyprswitch = ~/.cargo/bin/hyprswitch
 $rofiswitch = ~/.config/rofi/my_scripts/rofi_wswitch
 #################
@@ -121,7 +121,7 @@ decoration {
         passes = 3
 
         vibrancy = 0.1696
-	      
+
     }
 }
 
@@ -156,9 +156,9 @@ decoration {
 # }
 animations {
     enabled = true
- 
+
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
- 
+
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
@@ -193,7 +193,7 @@ master {
 misc {
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
-	vfr = true    
+	vfr = true
 }
 
 
@@ -213,7 +213,7 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 	accel_profile = flat
-	
+
     touchpad {
         natural_scroll = true
         scroll_factor = 2
@@ -316,10 +316,7 @@ binde = $mainMod SHIFT, up, resizeactive, 0 -10
 binde = $mainMod SHIFT, down, resizeactive, 0 10
 
 bind = ALT, TAB, exec, $rofiswitch
-
-$key = tab	
-$mod = super
-bind = $mod , $key, exec,$hyprswitch gui --mod-key $mod --key $key --max-switch-offset 9 --hide-active-window-border
+bind = $mainMod, TAB, workspace, previous
 
 # suspend on closing lid
 # bindl = , switch:Lid Switch, exec, systemctl suspend
