--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,3 +1,14 @@
+
+
+#    ██╗  ██╗██╗   ██╗██████╗ ██████╗ ██╗      ██████╗  ██████╗██╗  ██╗
+#    ██║  ██║╚██╗ ██╔╝██╔══██╗██╔══██╗██║     ██╔═══██╗██╔════╝██║ ██╔╝
+#    ███████║ ╚████╔╝ ██████╔╝██████╔╝██║     ██║   ██║██║     █████╔╝
+#    ██╔══██║  ╚██╔╝  ██╔═══╝ ██╔══██╗██║     ██║   ██║██║     ██╔═██╗
+#    ██║  ██║   ██║   ██║     ██║  ██║███████╗╚██████╔╝╚██████╗██║  ██╗
+#    ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝
+#    Author: Soham Patel
+
+
 source = $HOME/.cache/wal/colors-hyprland.conf
 
 # $font = JetBrainsMono Nerd Font
@@ -22,7 +33,7 @@ background {
 
 # Hours
 label {
-    monitor =
+    monitor = eDP-1
     text = cmd[update:1000] echo "<b><big> $(date +"%I") </big></b>"
     color = $color6
     font_size = 200
@@ -30,14 +41,14 @@ label {
     shadow_passes = 4
     shadow_size = 5
 
-    position = 0, 400
+    position = 0, 23%
     halign = center
     valign = center
 }
 
 # Minutes
 label {
-    monitor =
+    monitor = eDP-1
     text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
     color = $color6
     font_size = 200
@@ -45,7 +56,7 @@ label {
     shadow_passes = 4
     shadow_size = 5
 
-    position = 0, 160
+    position = 0, 10%
     halign = center
     valign = center
 }
@@ -53,7 +64,7 @@ label {
 
 # Week
 label {
-    monitor =
+    monitor = eDP-1
     text = cmd[update:43200000] date +"%A, %d %B"
     color = $color7
     font_size = 30
@@ -67,8 +78,77 @@ label {
 
 
 input-field {
-    monitor =
+    monitor = eDP-1
     size = 250, 50
+    outline_thickness = 3
+
+    dots_size = 0.26 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.64 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+
+    rounding = 22
+    outer_color = $color0
+    inner_color = $color0
+    font_color = $color6
+    fade_on_empty = true
+    placeholder_text = <i>Password...</i> # Text rendered in the input box when it's empty.
+
+    position = 0, 120
+    halign = center
+    valign = bottom
+}
+
+
+
+# for other monitor
+
+# Hours
+label {
+    monitor = HDMI-A-1
+    text = cmd[update:1000] echo "<b><big> $(date +"%I") </big></b>"
+    color = $color6
+    font_size = 100
+    font_family = $font
+    shadow_passes = 4
+    shadow_size = 5
+
+    position = 0, 23%
+    halign = center
+    valign = center
+}
+
+# Minutes
+label {
+    monitor = HDMI-A-1
+    text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
+    color = $color6
+    font_size = 100
+    font_family = $font
+    shadow_passes = 4
+    shadow_size = 5
+
+    position = 0, 10%
+    halign = center
+    valign = center
+}
+
+
+# Week
+label {
+    monitor = HDMI-A-1
+    text = cmd[update:43200000] date +"%A, %d %B"
+    color = $color7
+    font_size = 15
+    font_family = $font
+
+    position = 0,0
+    halign = center
+    valign = center
+}
+
+input-field {
+    monitor = HDMI-A-1
+    size = 125, 25
     outline_thickness = 3
 
     dots_size = 0.26 # Scale of input-field height, 0.2 - 0.8
