updated hyprpanel config

--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -87,7 +87,7 @@
   "bar.network.showWifiInfo": true,
   "theme.bar.buttons.radius": "0.6em",
   "bar.workspaces.show_icons": false,
-  "bar.workspaces.show_numbered": true,
+  "bar.workspaces.show_numbered": false,
   "bar.workspaces.numbered_active_indicator": "underline",
   "theme.bar.buttons.workspaces.smartHighlight": true,
   "theme.bar.buttons.workspaces.enableBorder": false,
@@ -123,8 +123,18 @@
   "theme.bar.buttons.network.background": "#242438",
   "theme.bar.buttons.monochrome": false,
   "theme.bar.buttons.icon_background": "#242438",
-  "bar.customModules.netstat.dynamicIcon": true,
+  "bar.customModules.netstat.dynamicIcon": false,
   "theme.bar.buttons.modules.netstat.enableBorder": false,
   "bar.customModules.netstat.labelType": "in",
-  "bar.customModules.netstat.label": true
+  "bar.customModules.netstat.label": true,
+  "theme.bar.buttons.opacity": 100,
+  "theme.bar.buttons.background_opacity": 40,
+  "bar.volume.label": true,
+  "theme.bar.buttons.volume.enableBorder": false,
+  "theme.bar.buttons.clock.enableBorder": true,
+  "bar.workspaces.showWsIcons": true,
+  "bar.workspaces.showApplicationIcons": false,
+  "theme.bar.buttons.windowtitle.enableBorder": false,
+  "bar.customModules.netstat.icon": "󰖟",
+  "bar.customModules.netstat.round": true
 }
