updated rofi, added wallselect

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,8 +42,8 @@ $menu = ~/.config/rofi/my_scripts/rofi_run
 $clipboard = ~/.config/rofi/my_scripts/rofi_clipboard
 $screenshot = hyprshot-gui
 $wallpaper = ~/.config/hypr/scripts/swww_change
+$wall_selector = ~/.local/bin/wall_select
 $powermenu =  ~/.config/rofi/my_scripts/powermenu.sh
-$hyprswitch = ~/.cargo/bin/hyprswitch
 $rofiswitch = ~/.config/rofi/my_scripts/rofi_wswitch
 #################
 ### AUTOSTART ###
@@ -55,12 +55,11 @@ $rofiswitch = ~/.config/rofi/my_scripts/rofi_wswitch
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme Adwaita
 exec-once = hypridle
 exec-once = hyprpanel
-exec-once = hyprpm reload
+# exec-once = hyprpm reload
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-exec-once = $hyprswitch init --show-title --size-factor 5.5 --workspaces-per-row 5 --custom-css ~/.config/hyprswitch/style.css &
 
-# exec-once = $wallpaper
+exec-once = $wallpaper
 exec-once = systemctl --user start hyprpolkitagent
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -305,6 +304,7 @@ bind = $mainMod ALT,  down, movewindow, d
 
 #custom
 bind = $mainMod ,W, exec, $wallpaper
+bind = $mainMod ALT, W, exec, $wall_selector
 bind = $mainMod ,V, exec, $clipboard
 bind = $mainMod ,L, exec, hyprlock
 bind = ALT, SPACE, exec, $menu
@@ -327,8 +327,8 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 5%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
