--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -9,24 +9,35 @@
 #    Author: Soham Patel
 
 
-source = $HOME/.cache/wal/colors-hyprland.conf
+source = ~/.cache/wal/colors-hyprland.conf
+general{
+	grace = 0
+}
 
 # $font = JetBrainsMono Nerd Font
 $font = Product Sans
 # $font = Geist Mono
 
+# background {
+  # monitor =
+  # color = $base
+  # # contrast = 0.8916
+  # # brightness = 0.8172
+  # # vibrancy = 0.1696
+  # # vibrancy_darkness = 0.0
+# }
 
 background {
     monitor =
     path = $HOME/.current_wallpaper
-    # color = $color1
+    color = "#FFFFFF"
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_size = 4
-    blur_passes = 3 # 0 disables blurring
-    noise = 0.0117
-    contrast = 1.3000 # Vibrant!!!
-    brightness = 0.8000
+    # blur_size = 4
+    blur_passes = 2 # 0 disables blurring
+    # noise = 0.0117
+    # contrast = 1.3000 # Vibrant!!!
+    # brightness = 0.8000
     vibrancy = 0.2100
     vibrancy_darkness = 0.0
 }
