hypr0.51 update and other stuff

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,7 +24,7 @@ source= ~/.cache/wal/colors-hyprland.conf
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = eDP-1, 2880x1800@90, 0x0, 2
-monitor = , preferred, auto-right, 1 
+monitor = , preferred, auto-up, 1 
 xwayland {
   # force_zero_scaling = true
 }
@@ -37,9 +37,11 @@ xwayland {
 
 # Set programs that you use
 $terminal = alacritty
+$terminal_alt = ~/.config/hypr/scripts/quick_term 
 $fileManager = nautilus
 $menu = ~/.config/rofi/my_scripts/rofi_run
 $clipboard = ~/.config/rofi/my_scripts/rofi_clipboard
+$clipboard_alt = ~/.config/hypr/scripts/clipboard_fzf
 $screenshot = hyprshot-gui
 $wallpaper = ~/.config/hypr/scripts/swww_change
 $wall_selector = ~/.local/bin/wall_select
@@ -58,7 +60,7 @@ exec-once = hyprpanel
 # exec-once = hyprpm reload
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
-
+exec-once = nm-applet --indicator
 exec-once = $wallpaper
 exec-once = systemctl --user start hyprpolkitagent
 #############################
@@ -224,9 +226,7 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = true
-}
+gesture= 3, horizontal, workspace
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -249,9 +249,12 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
+bind = $mainMod ALT, T, exec, $terminal_alt
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, B, exec, flatpak run app.zen_browser.zen
+bind = $mainMod, C, exec, code
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
@@ -309,21 +312,28 @@ bind = $mainMod ALT,  down, movewindow, d
 bind = $mainMod ,W, exec, $wallpaper
 bind = $mainMod ALT, W, exec, $wall_selector
 bind = $mainMod ,V, exec, $clipboard
-bind = $mainMod ,L, exec, hyprlock
+bind = $mainMod ALT,V, exec, $clipboard_alt
+
+bind = $mainMod ,L, exec, loginctl lock-session
 bind = ALT, SPACE, exec, $menu
 bind = ,Print, exec, $screenshot
 bind = $mainMod, X, exec , $powermenu
+
 bind = $mainMod, H, exec , hyprpanel -q; hyprpanel
+
+
+bind = ALT, TAB, exec, $rofiswitch
+bind = $mainMod, TAB, workspace, previous
+
 binde = $mainMod SHIFT, right, resizeactive, 10 0
 binde = $mainMod SHIFT, left, resizeactive, -10 0
 binde = $mainMod SHIFT, up, resizeactive, 0 -10
 binde = $mainMod SHIFT, down, resizeactive, 0 10
 
-bind = ALT, TAB, exec, $rofiswitch
-bind = $mainMod, TAB, workspace, previous
-
 bind = $mainMod CTRL, left, movecurrentworkspacetomonitor, l
 bind = $mainMod CTRL, right, movecurrentworkspacetomonitor, r
+bind = $mainMod CTRL, up, movecurrentworkspacetomonitor, u
+bind = $mainMod CTRL, down, movecurrentworkspacetomonitor, d
 
 # suspend on closing lid
 # bindl = , switch:Lid Switch, exec, systemctl suspend
@@ -366,9 +376,10 @@ windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
 blurls = rofi
 layerrule = blur, rofi
+
 windowrulev2 = float, title:^(.*Hyprshot.*)$
 windowrulev2 = opacity 0.96,class:^(code)$
-
+windowrulev2 = opacity 0.93,class:^(dev.zed.Zed)$
 windowrulev2 = opacity 0.90,class:^(org.gnome.Nautilus)$
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
@@ -382,7 +393,7 @@ layerrule = noanim, selection
 
 
 windowrulev2 = opacity 0.7 override, class:^(kitty)$
-
+# windowrulev2 = opacity 0.80 0.80,class:^(zen)$
 windowrulev2 = float, class:^(blueman-manager)$
 windowrulev2 = size 400 400, class:^(blueman-manager)$
 windowrulev2 = move 100%-w-70 40, class:^(blueman-manager)$
@@ -390,8 +401,19 @@ windowrulev2 = move 100%-w-70 40, class:^(blueman-manager)$
 windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 400 800, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = move 100%-w-10 40, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float, title:^(.*Network Manager.*)$
 
 
-################
+windowrulev2 = opacity 0.9 override, class:^(clipboard)$
+windowrulev2 = float,  class:^clipboard$
+windowrulev2 = size 500 500, class:^clipboard$
+windowrulev2 = move 100%-w-10 100%-w-40, class:^clipboard$
+windowrulev2 = animationstyle slide right, class:^clipboard$
+
+windowrulev2 = float,  class:^quick-term$
+windowrulev2 = size 500 500, class:^quick-term$
+windowrulev2 = move 100%-w-10 100%-w-40, class:^quick-term$
+windowrulev2 = animationstyle slide right, class:^quick-term$
+###############
 ###  Plugins ###
 ################
