--- a/.config/hyprpanel/config.json
+++ b/.config/hyprpanel/config.json
@@ -10,12 +10,12 @@
   "bar.launcher.icon": "",
   "theme.bar.buttons.enableBorders": false,
   "theme.bar.outer_spacing": "0.5em",
-  "wallpaper.pywal": true,
-  "wallpaper.enable": true,
+  "wallpaper.pywal": false,
+  "wallpaper.enable": false,
   "theme.bar.menus.opacity": 100,
   "theme.bar.transparent": true,
   "theme.matugen": false,
-  "wallpaper.image": "/home/sohampatel/Pictures/wallpaper/31.png",
+  "wallpaper.image": "/home/sohampatel/.current_wallpaper",
   "theme.bar.buttons.y_margins": "0.4em",
   "bar.layouts": {
     "0": {
@@ -32,7 +32,6 @@
         "systray",
         "hyprsunset",
         "volume",
-        "network",
         "bluetooth",
         "battery",
         "clock",
@@ -82,7 +81,7 @@
   "theme.bar.menus.border.radius": "0.7em",
   "theme.matugen_settings.mode": "dark",
   "theme.matugen_settings.scheme_type": "tonal-spot",
-  "theme.matugen_settings.variation": "standard_1",
+  "theme.matugen_settings.variation": "standard_2",
   "bar.network.truncation": false,
   "theme.bar.buttons.network.enableBorder": false,
   "bar.network.showWifiInfo": true,
