--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,9 +1,10 @@
 [general]
 import = [
     # "~/.config/alacritty/themes/themes/aura.toml"
-    "~/.cache/wal/colors-alacritty.toml"
+    "~/.cache/wal/colors-alacritty.toml",
+    # "colors.toml"
 ]
-
+# import = ["colors.toml"]
 [font]
 normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
 bold = { family = "JetBrainsMono Nerd Font", style = "Bold" }
