--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,5 @@
 # theme="/home/sohampatel/.cache/wal/colors-ghostty"
-theme=catppuccin-mocha
+theme=Catppuccin Mocha
 window-decoration = false
 
 #theme=GitHub Dark
