--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ source= ~/.cache/wal/colors-hyprland.conf
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1, 2880x1800@90, 0x0, 2
+monitor = eDP-1, 2880x1800@60, 0x0, 2
 monitor = , preferred, auto-up, 1 
 xwayland {
   # force_zero_scaling = true
@@ -38,7 +38,7 @@ xwayland {
 # Set programs that you use
 $terminal = alacritty
 $terminal_alt = ~/.config/hypr/scripts/quick_term 
-$fileManager = nautilus
+$fileManager = nautilus -w
 $menu = ~/.config/rofi/my_scripts/rofi_run
 $clipboard = ~/.config/rofi/my_scripts/rofi_clipboard
 $clipboard_alt = ~/.config/hypr/scripts/clipboard_fzf
@@ -84,7 +84,7 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 2
-    gaps_out = 4,4,0,4
+    gaps_out = 4,4,4,4
 
     border_size = 2
 
@@ -319,7 +319,8 @@ bind = ALT, SPACE, exec, $menu
 bind = ,Print, exec, $screenshot
 bind = $mainMod, X, exec , $powermenu
 
-bind = $mainMod, H, exec , hyprpanel -q; hyprpanel
+bind = $mainMod SHIFT, H, exec , hyprpanel -q; hyprpanel
+bind = $mainMod, H, exec, hyprpanel toggleWindow bar-0
 
 
 bind = ALT, TAB, exec, $rofiswitch
@@ -378,9 +379,11 @@ blurls = rofi
 layerrule = blur, rofi
 
 windowrulev2 = float, title:^(.*Hyprshot.*)$
-windowrulev2 = opacity 0.96,class:^(code)$
+windowrulev2 = opacity 0.90,class:^(code)$
 windowrulev2 = opacity 0.93,class:^(dev.zed.Zed)$
 windowrulev2 = opacity 0.90,class:^(org.gnome.Nautilus)$
+windowrulev2 = opacity 0.85,class:^(net.thunderbird.Thunderbird)$
+windowrulev2 = opacity, 0.85, class:^(org.telegram.desktop)$
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
 
@@ -414,6 +417,7 @@ windowrulev2 = float,  class:^quick-term$
 windowrulev2 = size 500 500, class:^quick-term$
 windowrulev2 = move 100%-w-10 100%-w-40, class:^quick-term$
 windowrulev2 = animationstyle slide right, class:^quick-term$
+
 ###############
 ###  Plugins ###
 ################
