--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,6 +18,7 @@
 # source = ~/.config/hypr/myColors.conf
 
 source= ~/.cache/wal/colors-hyprland.conf
+source= ./colors.conf
 ################
 ### MONITORS ###
 ################
@@ -63,6 +64,7 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 exec-once = nm-applet --indicator
 exec-once = $wallpaper
 exec-once = systemctl --user start hyprpolkitagent
+exec-once = qs -c overview
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -89,7 +91,8 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $color1 $color1 $color2 45deg
+    # col.active_border = $primary $primary $secondary 45deg
+    col.active_border = $color1 $color1 $color3 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -310,6 +313,7 @@ bind = $mainMod ALT,  down, movewindow, d
 
 #custom
 bind = $mainMod ,W, exec, $wallpaper
+bind = $mainMod, O, exec, qs ipc -c overview call overview toggle
 bind = $mainMod ALT, W, exec, $wall_selector
 bind = $mainMod ,V, exec, $clipboard
 bind = $mainMod ALT,V, exec, $clipboard_alt
