--- a/.config/alacritty/colors.toml
+++ b/.config/alacritty/colors.toml
@@ -1,48 +1,48 @@
 [colors.primary]
-background = '#101418'
-foreground = '#e0e2e8'
+background = '#1a1111'
+foreground = '#f0dede'
  
 [colors.cursor]
-text = '#e0e2e8'
-cursor = '#c2c7cf' 
+text = '#f0dede'
+cursor = '#d7c1c1' 
  
 [colors.vi_mode_cursor]
-text = '#101418'
-cursor = '#9dcbfc' 
+text = '#1a1111'
+cursor = '#ffb3b4' 
  
 [colors.search.matches]
-foreground = '#42474e' 
-background = '#d4bee5' 
+foreground = '#524343' 
+background = '#e5c18d' 
  
 [colors.search.focused_match]
-foreground = '#42474e' 
-background = '#9dcbfc' 
+foreground = '#524343' 
+background = '#ffb3b4' 
  
 [colors.footer_bar]
-foreground = '#42474e' 
-background = '#e0e2e8' 
+foreground = '#524343' 
+background = '#f0dede' 
  
 [colors.hints.start]
-foreground = '#42474e' 
-background = '#bac8da' 
+foreground = '#524343' 
+background = '#e6bdbd' 
  
 [colors.hints.end]
-foreground = '#42474e' 
-background = '#bac8da' 
+foreground = '#524343' 
+background = '#e6bdbd' 
  
 [colors.selection]
-text = '#101418'
-background = '#9dcbfc'
+text = '#1a1111'
+background = '#ffb3b4'
  
  
 [colors.normal]
 black = '#181818' 
 red = '#ffb4ab' 
-green = '#9dcbfc' 
-yellow = '#32628d' 
-blue = '#9dcbfc' 
-magenta = '#d4bee5' 
-cyan = '#bac8da' 
+green = '#ffb3b4' 
+yellow = '#8f4a4d' 
+blue = '#ffb3b4' 
+magenta = '#e5c18d' 
+cyan = '#e6bdbd' 
 white = '#BAC2DE' 
  
  
